--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ google-analytics:
   id:               ""
 
 # Disqus
-disqus:
-  id:               "kiko-plus"
+disqus:				
+  id:               "https-latemorning-github-io"
 
 # URL
 url:                "https://latemorning.github.io" # the base hostname & protocol for your site
